fixing visibility bug on safari

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,22 +3,25 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    @media screen and (max-width:800px){
-      flex-direction: column;
-    }
   }
-  
   .hero{
     width: 80%;
-    @media screen and (max-width:800px){
-      width:100%;
-      padding-left:0;
-    }
   }
   
   .projects{
     width:40%;
-    @media screen and (max-width:800px){
+  }
+  
+  
+  @media screen and (max-width:800px){
+    .main-content{
+      flex-direction: column;
+    }
+    .hero{
+      width:100%;
+      padding-left:0;
+    }
+    .projects{
       width:100%;
     }
   }
